# crafting-browser

./: .gitignore  Browser.sln  Cargo.toml  README.md  package.json  pnpm-lock.yaml  tsconfig.json
Browser/: Browser.csproj  MainWindow.xaml  MainWindow.xaml.cs  Resources1.Designer.cs  test.css  test.html
Browser/Css/: CssParser.cs  DescendantSelector.cs  Selector.cs  TagSelector.cs
Browser/DrawCommands/: Blend.cs  DrawCommand.cs  DrawLine.cs  DrawOutline.cs  DrawRectangle.cs  DrawRoundRectangle.cs  DrawText.cs
Browser/Html/: HtmlElement.cs  HtmlNode.cs  HtmlParser.cs  HtmlText.cs
Browser/Layouts/: BlockLayout.cs  DocumentLayout.cs  InputLayout.cs  Layout.cs  LineLayout.cs  TextLayout.cs
Browser/Utils/: ColorUtils.cs  FontUtils.cs
BrowserTests/: UnitTest1.cs
app/: page.tsx
app/components/: canvas.tsx
lib/: html-parser.ts  layout.ts
src/: accessibility.rs  browser.rs  css_parser.rs  font.rs  html_parser.rs  layout.html  layout.rs  layout_new.rs  lib.rs  main.rs  paint_command.rs  token.rs
src/css_parser/: descendant_seletor.rs  mod.rs  tag_selector.rs
src/html_parser/: html_node.rs  mod.rs
src/paint_command/: draw_image.rs  draw_line.rs  draw_outline.rs  draw_rect.rs  draw_round_rect.rs  draw_text.rs  mod.rs
