[package]
name = "browser"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.70"
unicode-segmentation = "1.12.0"
wasm-bindgen = "0.2.93"
web-sys = { version = "0.3.70", features = [
  'CanvasRenderingContext2d',
  'CssStyleDeclaration',
  'Document',
  'Element',
  'EventTarget',
  'HtmlCanvasElement',
  'HtmlElement',
  'MouseEvent',
  'WheelEvent',
  'Node',
  'Window',
  'console',
  'TextMetrics',
] }
