[package]
name = "browser"
version = "0.1.0"
edition = "2021"

# [lib]
# crate-type = ["cdylib"]

[dependencies]
# gtk = "0.18.1"
# js-sys = "0.3.70"
lazy_static = "1.5.0"
sdl2 = { version = "0.37.0", features = ["bundled"] }
skia-safe = { version = "0.78.0", features = ["all-linux"] }
unicode-segmentation = "1.12.0"
# wasm-bindgen = "0.2.93"
# web-sys = { version = "0.3.70", features = [
#   'CanvasRenderingContext2d',
#   'CssStyleDeclaration',
#   'Document',
#   'Element',
#   'EventTarget',
#   'HtmlCanvasElement',
#   'HtmlElement',
#   'MouseEvent',
#   'WheelEvent',
#   'Node',
#   'Window',
#   'console',
#   'TextMetrics',
# ] }
